Added uvs to project

--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -152,6 +152,7 @@
     <None Include="resources\shaders\simple.frag" />
     <None Include="resources\shaders\simple.vert" />
     <None Include="resources\simplescene.json" />
+    <None Include="resources\uv\suzanne.svg" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h" />
@@ -166,6 +167,9 @@
       <Project>{4f4b007f-ee21-46cf-b8de-2447b8b8015a}</Project>
       <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\uv\suzanne.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
