--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Resource Files\shaders">
       <UniqueIdentifier>{944919d2-d6c5-4179-a1b5-4e92840310d5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\uv">
+      <UniqueIdentifier>{052dcda9-e0ba-4936-a5c1-eb4a6c927555}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\simplescene.json">
@@ -46,6 +49,9 @@
     <None Include="resources\models\teapot.ply">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="resources\uv\suzanne.svg">
+      <Filter>Resource Files\uv</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h">
@@ -62,5 +68,10 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\uv\suzanne.png">
+      <Filter>Resource Files\uv</Filter>
+    </Image>
   </ItemGroup>
 </Project>
