--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\GLComponents.h" />
     <ClInclude Include="src\loaders\models\PlyLoader.h" />
+    <ClInclude Include="src\loaders\uvs\SvgLoader.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
     <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
+    <ClCompile Include="src\loaders\uvs\SvgLoader.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
