Added point light shadows

--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -148,6 +148,9 @@
     <None Include="resources\models\suzanne.ply" />
     <None Include="resources\shaders\simple.frag" />
     <None Include="resources\shaders\simple.vert" />
+    <None Include="resources\shaders\simple_shadow.frag" />
+    <None Include="resources\shaders\simple_shadow.geom" />
+    <None Include="resources\shaders\simple_shadow.vert" />
     <None Include="resources\simplescene.json" />
   </ItemGroup>
   <ItemGroup>
