Wrote loading of normal maps

--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -168,6 +168,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\textures\cube_normals.png" />
     <Image Include="resources\textures\sky.jpg" />
     <Image Include="resources\textures\TwoTone.png" />
     <Image Include="resources\textures\unnamed.jpg" />
