--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -158,30 +158,30 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Engine.h" />
-    <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\GLComponents.h" />
     <ClInclude Include="src\loaders\models\PlyLoader.h" />
-    <ClInclude Include="src\Material.h" />
-    <ClInclude Include="src\Model.h" />
-    <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
-    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\scene\Camera.h" />
+    <ClInclude Include="src\scene\Entity.h" />
+    <ClInclude Include="src\scene\light\PointLight.h" />
+    <ClInclude Include="src\scene\model\Material.h" />
+    <ClInclude Include="src\scene\model\Model.h" />
+    <ClInclude Include="src\scene\Scene.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Engine.cpp" />
-    <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
     <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
-    <ClCompile Include="src\Material.cpp" />
-    <ClCompile Include="src\Model.cpp" />
-    <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
-    <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\scene\Camera.cpp" />
+    <ClCompile Include="src\scene\Entity.cpp" />
+    <ClCompile Include="src\scene\light\PointLight.cpp" />
+    <ClCompile Include="src\scene\model\Material.cpp" />
+    <ClCompile Include="src\scene\model\Model.cpp" />
+    <ClCompile Include="src\scene\Scene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
