--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -168,6 +168,10 @@
     <ClInclude Include="src\scene\light\PointLight.h" />
     <ClInclude Include="src\scene\model\Material.h" />
     <ClInclude Include="src\scene\model\Model.h" />
+    <ClInclude Include="src\scene\Nameable.h" />
+    <ClInclude Include="src\scene\Positionable.h" />
+    <ClInclude Include="src\scene\Rotatable.h" />
+    <ClInclude Include="src\scene\Scalable.h" />
     <ClInclude Include="src\scene\Scene.h" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +185,10 @@
     <ClCompile Include="src\scene\light\PointLight.cpp" />
     <ClCompile Include="src\scene\model\Material.cpp" />
     <ClCompile Include="src\scene\model\Model.cpp" />
+    <ClCompile Include="src\scene\Nameable.cpp" />
+    <ClCompile Include="src\scene\Positionable.cpp" />
+    <ClCompile Include="src\scene\Rotatable.cpp" />
+    <ClCompile Include="src\scene\Scalable.cpp" />
     <ClCompile Include="src\scene\Scene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
