--- a/gameengine-GTest/gameengine-GTest.vcxproj
+++ b/gameengine-GTest/gameengine-GTest.vcxproj
@@ -37,15 +37,18 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\CameraTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\EntityTests.cpp" />
-    <ClCompile Include="src\ModelTests.cpp" />
+    <ClCompile Include="src\scene\CameraTests.cpp" />
+    <ClCompile Include="src\scene\model\ModelTests.cpp" />
+    <ClCompile Include="src\scene\NameableTests.cpp" />
+    <ClCompile Include="src\scene\Positionable.cpp" />
+    <ClCompile Include="src\scene\RotatableTests.cpp" />
+    <ClCompile Include="src\scene\ScalableTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gameengine\gameengine.vcxproj">
