--- a/gameengine-GTest/gameengine-GTest.vcxproj.filters
+++ b/gameengine-GTest/gameengine-GTest.vcxproj.filters
@@ -5,9 +5,6 @@
     <ClCompile Include="src\scene\NameableTests.cpp">
       <Filter>tests\scene</Filter>
     </ClCompile>
-    <ClCompile Include="src\scene\Positionable.cpp">
-      <Filter>tests\scene</Filter>
-    </ClCompile>
     <ClCompile Include="src\scene\RotatableTests.cpp">
       <Filter>tests\scene</Filter>
     </ClCompile>
@@ -18,6 +15,9 @@
       <Filter>tests\scene\model</Filter>
     </ClCompile>
     <ClCompile Include="src\scene\ScalableTests.cpp">
+      <Filter>tests\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\PositionableTests.cpp">
       <Filter>tests\scene</Filter>
     </ClCompile>
   </ItemGroup>
