--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -78,6 +78,9 @@
     <Image Include="resources\textures\cube_normals.png">
       <Filter>Resource Files\textures</Filter>
     </Image>
+    <Image Include="resources\textures\SuzanneSpecularMap.png">
+      <Filter>Resource Files\textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc">
