--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="src\scene\LocallyMovable.h" />
     <ClInclude Include="src\scene\model\Material.h" />
     <ClInclude Include="src\scene\model\Model.h" />
+    <ClInclude Include="src\scene\model\Reflection.h" />
     <ClInclude Include="src\scene\Nameable.h" />
     <ClInclude Include="src\scene\Positionable.h" />
     <ClInclude Include="src\scene\Rotatable.h" />
@@ -185,6 +186,7 @@
     <ClCompile Include="src\scene\LocallyMovable.cpp" />
     <ClCompile Include="src\scene\model\Material.cpp" />
     <ClCompile Include="src\scene\model\Model.cpp" />
+    <ClCompile Include="src\scene\model\Reflection.cpp" />
     <ClCompile Include="src\scene\Nameable.cpp" />
     <ClCompile Include="src\scene\Positionable.cpp" />
     <ClCompile Include="src\scene\Rotatable.cpp" />
