--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="src\scene\LocallyMovable.h">
       <Filter>Header Files\scene</Filter>
     </ClInclude>
+    <ClInclude Include="src\scene\model\Reflection.h">
+      <Filter>Header Files\scene\model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\render\EngineCanvas.cpp">
@@ -142,6 +145,9 @@
     </ClCompile>
     <ClCompile Include="src\scene\LocallyMovable.cpp">
       <Filter>Source Files\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\model\Reflection.cpp">
+      <Filter>Source Files\scene\model</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
