--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -51,6 +51,12 @@
     <None Include="resources\simplescene_skybox.json">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="resources\models\joining section.ply">
+      <Filter>Resource Files\models</Filter>
+    </None>
+    <None Include="resources\models\opened cube.ply">
+      <Filter>Resource Files\models</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h">
